# nylang

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  shell.nix  unko.nylsh
.github/workflows/: test.yml
demo/: __test__.nyl  demo.nyl  if.nyl  import.nyl  input.nyl  let.nyl  loop.nyl  print_words.nyl  variable.nyl
lib/: __array__.nyl  __math__.nyl  __rand__.nyl  __test__.nyl
lib/tests/: array.nyl  math.nyl  pow.nyl  rand.nyl  sum.nyl
nyl_samples/: #loop.nyl#  array.nyl  import.nyl  manipulation.nyl  modify_value.nyl  quick_import_main.nyl  quick_import_module.nyl  type.nyl
nylsh_samples/: array.nylsh  calculator.nylsh  display_test.nylsh  life_game.nylsh
samples/: array.nyl  buitin_functions.nyl  calculator.nyl  demo.nyl  error.nyl  if.nyl  import.nyl  input.nyl  len.nyl  loop.nyl  print.nyl  print_words.nyl  string.nyl  type.nyl  types.nyl  variable.nyl
scripts/: install.sh  uninstall.sh
src/: #main.rs#  lib.rs  main.rs
src/ast/: ast.rs
src/builtin/: array.rs  builtin.rs  errors.rs  io.rs  mod.rs
src/enve/: enve.rs  mod.rs
src/eval/: #eval.rs#  eval.rs
src/help/: help.rs
src/lexer/: lexer.rs
src/object/: object.rs
src/parser/: parser.rs
src/run_program/: mod.rs  run_program.rs
src/token/: token.rs
src/tools/: tools.rs
src/transpiler_rust/: mod.rs  transpiler_rust.rs
test_nylang_wasm/: next.config.js  package.json
test_nylang_wasm/.next/: trace
test_nylang_wasm/pages/: index.js
test_nylang_wasm/styles/: Home.module.css
test_src/: bark.nyl  demo.nyl  function.nyl  let.nyl
tests/: web.rs
(+60 files in other folders)
