[package]
name = "nylang"
version = "0.1.18"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.78"
wasm-bindgen-test = "0.3.0"
rand = { version = "0.7.3", features = ["wasm-bindgen"] }

[profile.release]
opt-level = 's'
lto = true
codegen-units = 1